--- a/app/globals.css
+++ b/app/globals.css
@@ -75,3 +75,11 @@ body {
   margin-bottom: 6px;
 }
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE/Edge */
+  scrollbar-width: none;     /* Firefox */
+}
+
